<resources>
    <string name="app_name">FinalProject</string>
    <string name="enter_as_either_text_or_image">Enter as either text or image</string>
    <string name="noProblems">No problems to display</string>
    <string name="quizproblem">QuizProblem</string>
    <string name="when_user_clicks_it_expands_into_an_imageview">When user clicks, it expands into an ImageView</string>
    <string name="type_answer">Type Answer</string>
    <string name="check_answer">Check Answer</string>
    <string name="view_solution">View Solution</string>
    <string name="give_up">Give Up</string>
    <string name="expanded_imageview_to_display_problem_image">Expanded ImageView to display problem image</string>
    <string name="your_answer_status">Your Answer Status</string>
    <string name="correct_answer">Correct Answer</string>
    <string name="solution">Solution:</string>
    <string name="the_problem_s_solution">The problem\'s solution</string>
    <string name="answer">Answer:</string>
    <string name="expand_imagebutton_to_display_solution">Expand ImageButton to display solution</string>
    <string name="expanded_imageview_to_display_solution">Expanded ImageView to display solution</string>
    <string name="problem">Problem:</string>
    <string name="displayproblem">DisplayProblem</string>
    <string name="displayanswer">DisplayAnswer</string>
    <string name="displaysolution">DisplaySolution</string>
    <string name="expanded_problem_or_solution_imageview">Expanded problem or solution ImageView</string>
    <string name="course_name">Course Name</string>
    <string name="create">Create</string>
    <string name="enter_problem_theorem_prompt_etc">Enter Problem, Theorem, Prompt, etc.</string>
    <string name="capture_photo">Capture Photo</string>
    <string name="captures_photo_for_problem">Captures photo for problem</string>
    <string name="answer_optional">Answer: (Optional)</string>
    <string name="answer_on_quiz_must_match_this_exactly_to_be_correct">Answer on quiz must match this exactly to be correct</string>
    <string name="enter_answer">Enter Answer</string>
    <string name="enter_solution_proof_response_etc">Enter Solution, Proof, Response, etc.</string>
    <string name="imageview_for_solution">ImageView for solution</string>
    <string name="unit_name">Unit Name</string>
    <string name="go_to_your_courses">Go to your courses</string>
    <string name="add_new_course">Add new course</string>
    <string name="add_new_problem">Add new problem</string>
    <string name="add_new_unit">Add new unit</string>
    <string name="receive_quiz_question">Receive Quiz Question</string>
    <string name="coursename">CourseName</string>
    <string name="problemname">ProblemName</string>
    <string name="unitname">UnitName</string>
    <string name="image_button_for_solution">Image button for solution</string>
    <string name="image_button_for_problem">Image button for problem</string>
    <string name="image_to_display_if_problem_is_an_image">Image to display if problem is an image</string>
    <string name="correct">CORRECT</string>
    <string name="receive_random_quiz_question">Receive random quiz question</string>
</resources>
